--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.dbsm/com.example.dbsm.HelloApplication</mainClass>
+                            <mainClass>com.example.dbsm/com.example.desktopRele.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
